[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-traffic-control"
version = "0.1.0"
description = "Autonomous traffic control environment and API"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai",
  "numpy",
  "requests",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:app"

[tool.setuptools]
py-modules = [
  "app",
  "easy_task",
  "hard_task",
  "inference",
  "medium_task",
  "models",
  "repro_bug",
  "test_api",
  "traffic_env",
]
